# FlowTrace

./: .gitignore  .pre-commit-config.yaml  README.md  README.ru.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: CHANGELOG.md  overview.md  philosophy.md
examples/: demo_basic_trace.py  demo_config_tracing.py  demo_exceptions_trace.py  demo_nasted_flags.py  demo_recursive.py  demo_start_tracing.py
flowtrace/: __init__.py  async_model.py  async_reconstruct.py  config.py  core.py  decorators.py  events.py  formatters.py  monitoring.py  raw_dispatcher.py  session.py
flowtrace/examples/: fib.py  fib_no_decorator.py  nested_demo.py  tree_demo.py
flowtrace/formatters/: async_tree.py  formatters.py
flowtrace/utils/: code_flags.py
tests/: exceptions_trace.py  test_async_await_semantics.py  test_async_task_context.py  test_core_tracing.py  test_exceptions.py  test_exceptions_trace.py  test_sync_basic.py
