[project]
name = "flowtrace"
version = "0.1.1"
description = "System-level execution tracer for Python 3.12+ (PEP 669)"
authors = [{ name = "Alexandr153", email = "boss191105@bk.ru" }]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["python", "monitoring", "tracing", "PEP669", "async"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Debuggers",
]
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/Python-Fork/FlowTrace"
Documentation = "https://github.com/Python-Fork/FlowTrace/blob/main/README.md"
Issues = "https://github.com/Python-Fork/FlowTrace/issues"